詳細ページと投稿フォームの修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -23,6 +23,7 @@ ja:
         situation: シチュエーション
         area: エリア
         recommend_image: おすすめスポット
+        address: 場所
       post_valuation:
         access_point: アクセスしやすい
         casually_point: 気軽に行ける
