ゲストログイン用のボタンを設置

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -1,7 +1,8 @@
 ja:
-  sessions:
-    guest_sign_in:
-      notice: 'ゲストユーザーとしてログインしました'
+  users:
+    sessions:
+      guest_sign_in:
+        notice: 'ゲストユーザーとしてログインしました'
   activerecord:
     attributes:
       user:
