ゲストユーザーのメールアドレス・パスワードを変更できないように設定

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -3,8 +3,11 @@ ja:
     sessions:
       guest_sign_in:
         notice: 'ゲストユーザーとしてログインしました'
-      ensure_normal_user:
-        alert: 'ゲストユーザーは削除できません'
+    registrations:
+      update:
+        alert: 'ゲストユーザーの更新はできません'
+      destroy:
+        alert: 'ゲストユーザーの削除はできません'
   activerecord:
     attributes:
       user:
