ゲストユーザーのパスワード再設定のメール送信機能を止めるように設定

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -8,6 +8,9 @@ ja:
         alert: 'ゲストユーザーの更新はできません'
       destroy:
         alert: 'ゲストユーザーの削除はできません'
+    passwords:
+      create:
+        alert: 'ゲストユーザーのパスワード再設定はできません'
   activerecord:
     attributes:
       user:
