--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -38,6 +38,10 @@ ja:
         unlock_token: ロック解除用トークン
         updated_at: 更新日
         name: ユーザー名
+        profile_image: プロフィール画像
+        address: 住んでいる都道府県
+        go_to_area: 行きたい場所
+        like_situation: 好きなシチュエーション
     models:
       user: ユーザー
   devise:
