--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,12 @@
 ---
 ja:
+  views:
+    pagination:
+        first: '最初'
+        last: '最後'
+        previous: '前へ'
+        next: '次へ'
+        truncate: '...'
   posts:
     create:
       notice: '投稿しました'
